# AutomatePeerReview

./: README.md  app.py  pyproject.toml  start.py
templates/: debug.html  evaluate.html  home.html
